<resources>
    <string name="app_name">5A厨房</string>
    <string name="into">欢迎进入</string>
    <string name="internet">网络不给力，请检查网络设置!</string>
    <string name="internet_error">网址解析错误</string>
    <string name="web_error">服务器响应失败！</string>
    <string name="btn_submit_order">提交订单</string>
    <string name="btn_reset_order">重置订单</string>
    <string name="dialog_home">首       页</string>
    <string name="dialog_cook">找厨师</string>
    <string name="dialog_veg">美食街</string>
    <string name="tv_cook_name">名称：</string>
    <string name="tv_cook_info">说明：</string>
    <string name="tv_cook_from">提供公司：</string>
    <string name="tv_cook_price">价格：</string>
    <string name="tv_price">￥：</string>
    <string name="tv_chose_address">服务地址(必填):</string>
    <string name="tv_chose_time">用餐时间(必填):</string>
    <string name="tv_getveg_time">收货时间(必填):</string>
    <string name="tv_user_name">姓名(必填):</string>
    <string name="tv_user_phone">电话(必填):</string>
    <string name="tv_user_beizhu">备注(选填):</string>
    <string name="tv_veg_number">数量(必填):</string>
    <string name="et_user_name">请输入您的姓名</string>
    <string name="et_user_phone">请输入您的联系电话</string>
    <string name="et_user_beizhu">您有什么嘱咐厨师的？</string>
    <string name="et_user_street">请输入您的详细地址</string>
    <string name="post_toast">必填信息不能为空！</string>
    <string name="order">厨师下单</string>
    <string name="order_veg">蔬菜下单</string>
    <string name="order_success">下单成功</string>
    <string name="order_fail">下单失败</string>
    <string name="number_second">秒后跳转到首页！</string>
    <string name="click_chose_address">单击选择服务地址</string>
    <string name="chose_province">选择省</string>
    <string name="chose_city">选择市</string>
    <string name="chose_county">选择县</string>
    <string name="chose_line">/</string>
    <string name="btn_back">返回</string>
    <string name="btn_finish">完成</string>
</resources>
