<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nzwlkj.fiveakitchen.activity.VegPostActivity">

    <TextView
        android:background="@color/small_hui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/order_veg"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_veg_post_img"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_veg_post_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:text="@string/tv_cook_name"
                android:textColor="@color/red"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_veg_post_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxLines="7"
                android:text="@string/tv_cook_info"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/hui"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tv_price"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_veg_post_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tv_cook_price"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_getveg_time"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_et_cook"
                        android:padding="5dp"
                        android:text="选择日期"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_et_cook"
                        android:padding="5dp"
                        android:text="选择时间"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_veg_number"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <EditText
                    android:inputType="number"
                    android:layout_marginLeft="30dp"
                    android:id="@+id/et_veg_people_number"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_et_cook"
                    android:maxLines="1"
                    android:padding="5dp" />

                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="kg"
                    android:textSize="15dp" />

            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tv_user_name"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/et_veg_people_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_et_cook"
                android:hint="@string/et_user_name"
                android:maxLines="1"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/tv_user_phone"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/et_veg_people_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_et_cook"
                android:hint="@string/et_user_phone"
                android:inputType="phone"
                android:padding="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_subimt_order"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_btn_cook"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/btn_submit_order"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_reset_order"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_btn_cook"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/btn_reset_order"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
