<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nzwlkj.fiveakitchen.activity.CityChoseActivity">

    <LinearLayout
        android:background="@color/small_hui"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/btn_back"
            android:textSize="15sp"
            android:background="@drawable/bg_btn_city"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_back" />

        <ImageView
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/btn_finish"
            android:background="@drawable/bg_btn_city"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_finish" />

        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:background="@color/small_hui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        >

        <LinearLayout
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_city_provice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/chose_province"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chose_line"
                android:textSize="20sp" />

            <TextView
                android:textSize="20sp"
                android:id="@+id/tv_city_city"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/chose_city" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chose_line"
                android:textSize="20sp" />

            <TextView
                android:textSize="20sp"
                android:id="@+id/tv_city_county"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/chose_county" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lv_province"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"></android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lv_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"></android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lv_county"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"></android.support.v7.widget.RecyclerView>

    </LinearLayout>

</LinearLayout>
