<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:id="@+id/cook_item"
    android:layout_marginLeft="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/iv_cook_show_img"
            />

        <LinearLayout
            android:paddingTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:paddingLeft="10dp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:textColor="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_cook_name"
                    />
                <TextView
                    android:textColor="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_cook_from"
                    />
                <TextView
                    android:textColor="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_cook_price"
                    />
                <TextView
                    android:textColor="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_cook_info"
                    />

            </LinearLayout>

            <LinearLayout
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:textColor="@color/black"
                    android:text="1"
                    android:maxLines="1"
                    android:id="@+id/tv_cook_show_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:textColor="@color/black"
                    android:text="3"
                    android:maxLines="1"
                    android:id="@+id/tv_cook_show_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:text="4"
                    android:id="@+id/tv_cook_show_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:textColor="@color/black"
                    android:text="2"
                    android:id="@+id/tv_cook_show_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:background="@color/bg_btn_dialog"
        android:layout_width="match_parent"
        android:layout_height="5dp" />

</LinearLayout>
